--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,26 +1,37 @@
 input {
     file {
     type => "iis"
-    path => "/usr/share/logstash/iis/*/*.log"
+    path => "/usr/share/logstash/iis/*.log"
     start_position => "beginning"
     }
 }
 
 
 filter {
+if [message] =~ "^#" {
+  drop {}
+  }
 
   dissect {
     mapping => {
       message => '%{log_timestamp} %{+log_timestamp} %{s-ip} %{cs-method} %{cs-uri-stem} %{cs-uri-query} %{s-port} %{cs-username} %{c-ip} %{cs-user-agent} %{cs-referer} %{sc-status} %{sc-substatus} %{sc-win32-status} %{time-taken}'
     }
+    convert_datatype => {
+      "time-taken" => "int"
+      "s-port" => "int"
+      "sc-status" => "int"
+      "sc-substatus" => "int"
+      "sc-win32-status" => "int"
+    }
+ 
   }
 
-  date {
-    match => [ "log_timestamp", "YYYY-MM-dd HH:mm:ss" ]
-      timezone => "Etc/UTC"
-  }
+   date {
+        match => [ "log_timestamp", "yyyy-MM-dd HH:mm:ss" ]
+        target => "@timestamp"
+        timezone => "Etc/UTC"
+      }
 
-  convert => ["time-taken", "integer"]
 }
 
 
