agrego otro file

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,7 +1,12 @@
 input {
     file {
     type => "iis"
-    path => "/usr/share/logstash/iis/*.log"
+    path => "/usr/share/logstash/iis/*/*.log"
+    start_position => "beginning"
+    }
+      file {
+    type => "iis-api"
+    path => "/usr/share/logstash/iis/API/*.log"
     start_position => "beginning"
     }
 }
